--- a/config.toml
+++ b/config.toml
@@ -5,11 +5,11 @@ title = 'My New Blog'
 DefaultContentLanguage = "en"
 
 theme = "beautifulhugo"
-pygmentsStyle = "trac"
-pygmentsUseClasses = true
+# pygmentsStyle = "trac"
 pygmentsCodeFences = true
+pygmentsUseClasses = true
 pygmentsCodefencesGuessSyntax = true
-#pygmentsUseClassic = true
+# pygmentsUseClassic = true
 #pygmentOptions = "linenos=inline"
 #disqusShortname = "XXX"
 #googleAnalytics = "XXX"
@@ -26,57 +26,37 @@ pygmentsCodefencesGuessSyntax = true
   comments = true
   readingTime = true
   wordCount = true
-  useHLJS = true
+  # useHLJS = true
   socialShare = true
   delayDisqus = true
   showRelatedPosts = true
 #  hideAuthor = true
 #  gcse = "012345678901234567890:abcdefghijk" # Get your code from google.com/cse. Make sure to go to "Look and Feel" and change Layout to "Full Width" and Theme to "Classic"
-
-[[Params.bigimg]]
- src = "img/triangle.jpg"
- desc = "Triangle"
+  
+# [[Params.bigimg]]
+#  src = "img/triangle.jpg"
+#  desc = "Triangle"
 [[Params.bigimg]]
  src = "img/sphere.jpg"
  desc = "Sphere"
  # position: see values of CSS background-position.
- position = "center top"
-[[Params.bigimg]]
- src = "img/hexagon.jpg"
- desc = "Hexagon"
+#  position = "center top"
+# [[Params.bigimg]]
+#  src = "img/hexagon.jpg"
+#  desc = "Hexagon"
 
 [Author]
   # Set only your "username" for default hosts and full URLs otherwise (e.g., "https://MyGitLab.org/username")
-  name = "Some Person"
-  website = "yourwebsite.com"
-  email = "youremail@domain.com"
-  facebook = "username"
+  name = "Harut Harutyunyan"
+  website = ""
+  email = "har8unyan@gmail.com"
+
   github = "username"
-  gitlab = "username"
-  bitbucket = "username"
-  twitter = "username"
-  reddit = "username"
   linkedin = "username"
-  xing = "username"
-  stackoverflow = "users/XXXXXXX/username"
-  snapchat = "username"
-  instagram = "username"
-  youtube = "user/username" # or channel/channelname
-  soundcloud = "username"
-  spotify = "username"
-  bandcamp = "username"
-  itchio = "username"
-  vk = "username"
-  paypal = "username"
-  telegram = "username"
-  500px = "username"
-  codepen = "username"
-  mastodon = "url"
-  kaggle = "username"
-  weibo = "username"
-  slack = "username"
+#   youtube = "user/username" # or channel/channelname
+#   paypal = "username"
+  telegram = "har8unyan"
   discord = "invite code (https://discord.gg/XXXXXXX)"
-  strava = "userid"
 
 [[menu.main]]
     name = "Blog"
@@ -86,30 +66,30 @@ pygmentsCodefencesGuessSyntax = true
 [[menu.main]]
     name = "About"
     url = "page/about/"
-    weight = 3
-
-[[menu.main]]
-    identifier = "samples"
-    name = "Samples"
     weight = 2
 
-[[menu.main]]
-    parent = "samples"
-    name = "Big Image Sample"
-    url = "post/2017-03-07-bigimg-sample"
-    weight = 1
+# [[menu.main]]
+#     identifier = "samples"
+#     name = "Samples"
+#     weight = 3
 
-[[menu.main]]
-    parent = "samples"
-    name = "Math Sample"
-    url = "post/2017-03-05-math-sample"
-    weight = 2
+# [[menu.main]]
+#     parent = "samples"
+#     name = "Big Image Sample"
+#     url = "post/2017-03-07-bigimg-sample"
+#     weight = 1
 
-[[menu.main]]
-    parent = "samples"
-    name = "Code Sample"
-    url = "post/2016-03-08-code-sample"
-    weight = 3
+# [[menu.main]]
+#     parent = "samples"
+#     name = "Math Sample"
+#     url = "post/2017-03-05-math-sample"
+#     weight = 2
+
+# [[menu.main]]
+#     parent = "samples"
+#     name = "Code Sample"
+#     url = "post/2016-03-08-code-sample"
+#     weight = 3
 
 [[menu.main]]
     name = "Tags"
