remove project from url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://harut-harutyunyan.github.io/UsefulBlog/'
+baseURL = 'https://harut-harutyunyan.github.io'
 languageCode = 'en-us'
 title = 'My New Blog'
 
@@ -15,7 +15,7 @@ pygmentsCodefencesGuessSyntax = true
 #googleAnalytics = "XXX"
 
 [Params]
-#  homeTitle = "Beautiful Hugo Theme" # Set a different text for the header on the home page
+  homeTitle = "Beautiful Hugo Theme" # Set a different text for the header on the home page
   subtitle = "Build a beautiful and simple website in minutes"
   mainSections = ["post","posts"]
   logo = "img/avatar-icon.png" # Expecting square dimensions
@@ -24,26 +24,19 @@ pygmentsCodefencesGuessSyntax = true
   commit = false
   rss = true
   comments = true
-  readingTime = true
-  wordCount = true
   # useHLJS = true
   socialShare = true
   delayDisqus = true
   showRelatedPosts = true
-#  hideAuthor = true
-#  gcse = "012345678901234567890:abcdefghijk" # Get your code from google.com/cse. Make sure to go to "Look and Feel" and change Layout to "Full Width" and Theme to "Classic"
-  
-# [[Params.bigimg]]
-#  src = "img/triangle.jpg"
-#  desc = "Triangle"
+  hideAuthor = true
+
+
 [[Params.bigimg]]
  src = "img/sphere.jpg"
  desc = "Sphere"
  # position: see values of CSS background-position.
-#  position = "center top"
-# [[Params.bigimg]]
-#  src = "img/hexagon.jpg"
-#  desc = "Hexagon"
+ position = "center top"
+
 
 [Author]
   # Set only your "username" for default hosts and full URLs otherwise (e.g., "https://MyGitLab.org/username")
@@ -67,29 +60,6 @@ pygmentsCodefencesGuessSyntax = true
     name = "About"
     url = "page/about/"
     weight = 2
-
-# [[menu.main]]
-#     identifier = "samples"
-#     name = "Samples"
-#     weight = 3
-
-# [[menu.main]]
-#     parent = "samples"
-#     name = "Big Image Sample"
-#     url = "post/2017-03-07-bigimg-sample"
-#     weight = 1
-
-# [[menu.main]]
-#     parent = "samples"
-#     name = "Math Sample"
-#     url = "post/2017-03-05-math-sample"
-#     weight = 2
-
-# [[menu.main]]
-#     parent = "samples"
-#     name = "Code Sample"
-#     url = "post/2016-03-08-code-sample"
-#     weight = 3
 
 [[menu.main]]
     name = "Tags"
